--- a/README.adoc
+++ b/README.adoc
@@ -1,82 +1,151 @@
-;;; STATE.scm
-;;; Current and near-term state for NUJ H&S / PR work programme
+cat > README.adoc <<EOF
+= slopctl: The Neurosymbolic Anti-Slop Enforcer
+:toc: macro
+:toc-title: Contents
+:icons: font
+:idprefix:
+:idseparator: -
+:sectanchors:
+:experimental:
 
-(project
-  (name "NUJ-HS-PR-2025-2027")
-  (time-horizon
-    (start "2025-04")       ; post-DM
-    (now   "2025-09")
-    (target "2027-05")      ; DM 2027 window
-  )
+image:assets/avatar.svg[width=120, align="center"]
 
-  (constraints
-    (fte 0.2)               ; coordination capacity
-    (budget-total 1000)     ; GBP, 2-year period
-    (volunteer-driven? #t))
+[.lead]
+**slopctl** is not a linter. It is a **Cybernetic Control Loop** for Large Language Models.
 
-  (status
-    (reporting-template
-      (pr-sector
-        (docx-template-ready? #t)
-        (includes-metrics? #t)
-        (includes-pmi-reflection? #t)
-        (adoption-target "all-sectors")))
-    (hazards-summary
-      (cross-sector-digest-ready? #t)
-      (length-pages 2)
-      (sectors-targeted
-        (freelance pr broadcast newspapers magazines online)))
-    (roadmap
-      (event-chain-methodology? #t)
-      (critical-chain-identified? #t)
-      (throughput-accounting-linked? #t)))
+It wraps stochastic AI models in a deterministic "Truth Sandwich," using a neurosymbolic architecture (Rust + Idris 2) to enforce strict architectural compliance. It rejects "slop"—hallucinations, lazy typing, and sycophancy—by mathematically preventing the model from converging on a sloppy state.
 
-  (agenda-upcoming-meeting
-    (first-time-topics
-      (ventilation-and-climate-bulletins
-        (scope "seasonal guidance + H&S framing")
-        (difficulty "low")
-        (visibility "high"))
-      (accessibility-charter-pilot
-        (scope "standards + hybrid activism + digital practices")
-        (difficulty "medium")
-        (visibility "high"))
-      (digital-doppelganger-and-ai-safety-draft
-        (scope "OSINT, AI-trolling, deepfakes, agentic AI risks")
-        (difficulty "high")
-        (visibility "very-high"))
-      (group-risk-assessment-templates
-        (scope "team/collective risk + class-action potential")
-        (difficulty "medium")
-        (visibility "medium-high"))))
+---
 
-  (buffers
-    (time-buffer
-      (policy-buffer-months 2)   ; pre-DM
-      (comms-buffer-months 1))   ; pre-seasonal windows
-    (resource-buffer
-      (fte-reserve 0.02)         ; 10% of 0.2
-      (budget-reserve 100))      ; GBP contingency
+toc::[]
 
-  (metrics
-    (core
-      (impact-units
-        (definition
-          "reach * urgency * H&S-alignment / resource-cost"))
-      (adoption
-        (report-template-use-rate "TBD")
-        (sectors-using-ventilation-bulletins "TBD")
-        (accessibility-charter-signatories "TBD"))
-      (communications
-        (newsletter-frequency "target: >= quarterly")
-        (articles-per-year-in-The-Journalist 2)
-        (labourstart-mentions-per-year 2))))
+== 1. Philosophy: The "Civilisation 8 Ultra" Standard
 
-  (risks
-    (under-recognition-of-expertise? #t)
-    (capacity-overload? #t)
-    (ai-threats-escalate-faster-than-policy? #t)
-    (mitigations
-      (use-templates-and-rituals? #t)
-      (prioritise-high-throughput-items-first? #t)
-      (ally-with-external-orgs? #t))) )
+Standard AI tools optimise for **Probability** (the path of least resistance). This results in "average" code—functional, but structurally weak.
+
+**slopctl** inverts this by optimising for **Fidelity**. It treats the LLM not as an oracle, but as an untrusted stochastic process (System 1) that must be constrained by a formal logic engine (System 3).
+
+[quote, Stafford Beer, 'Designing Freedom']
+"The purpose of a system is what it does."
+
+If your system permits sloppy code, its purpose is slop. **slopctl** changes the purpose.
+
+== 2. Architecture
+
+We implement a **Viable System Model (VSM)** to manage the generation process:
+
+[source,text]
+----
+                  THE "ANTI-SLOP" CONTROL LOOP
+                  ============================
+
+      [ USER INPUT ]
+           |
+           v
+  +--------------------+       (Feedback Signal)
+  |  CYBERNETIC AGENT  |<----------------------------------------+
+  |  (Rust Controller) |                                         |
+  +--------------------+                                         |
+           |                                                     |
+           | (1) Prompt + Constraints                            |
+           v                                                     |
+    +-------------+                                              |
+    |     LLM     |  <-- System 1: The Plant (Stochastic)        |
+    +-------------+                                              |
+           |                                                     |
+           | (2) Raw Output (Draft)                              |
+           v                                                     |
+  +--------------------+                                         |
+  |  LAYER 1: SYNTAX   |  <-- System 2: The Reflex (Tree-sitter) |
+  +--------------------+                                         |
+           |                                                     |
+           +---(FAIL: "Missing Semicolon")-----------------------+
+           |                                                     |
+           | (PASS: Valid Code)                                  |
+           v                                                     |
+  +--------------------+       +--------------------------+      |
+  |  LAYER 2: LOGIC    | <---- |  IDRIS PROOF ENGINE      |      |
+  |  (Semantic Check)  |       |  System 3: The Brain     |      |
+  +--------------------+       +--------------------------+      |
+           |                                 ^                   |
+           +---(FAIL: "Scope Creep")---------|-------------------+
+           |                                 |
+           | (PASS: High Fidelity)           |
+           v                                 |
+    +-------------+                          |
+    | FINAL BUILD |  ------------------------+
+    +-------------+
+----
+
+* **The Muscle (Rust):** Handles TUI, networking, and syntax parsing (Tree-sitter).
+* **The Brain (Idris 2):** Handles semantic validation and theorem proving via Dependent Types.
+* **The Compiler (Zig):** Orchestrates the zero-dependency static build.
+
+== 3. Installation
+
+We prioritise **Oil** for bootstrapping. Reference scripts for other shells (Bash, Fish, Nu, etc.) can be found in `scripts/polyglot_shells.adoc`.
+
+[source,oil]
+----
+#!/usr/bin/env oil
+# scripts/bootstrap.oil
+
+echo "Initialising Slop Control..."
+var components = %[apps/slopctl crates/compliance dsl/idris]
+
+# 1. Build the Brain (Idris -> C -> Zig Static Lib)
+cd dsl/idris
+zig build -Doptimize=ReleaseFast
+cd ../../
+
+# 2. Build the Body (Rust TUI)
+cd apps/slopctl
+cargo build --release
+
+# 3. Verify Compliance
+just audit
+echo "System Ready. Run 'just run' to begin."
+----
+
+== 4. Usage
+
+The project is managed via a `Justfile`. Do not use `make`.
+
+[source,bash]
+----
+# Start the TUI Enforcer
+just run
+
+# Run a strict compliance audit on the codebase itself
+just check
+
+# Deploy to a container (Podman)
+just deploy-podman
+----
+
+=== Configuration
+Configuration is handled via **Nickel** for type-safe contracts. YAML is banned.
+
+* **Policy (`Mustfile`):** Human-readable immutable laws (Constitution).
+* **Settings (`config/slopctl.ncl`):** Machine-readable thresholds.
+
+== 5. Deployment Targets
+
+We officially support the following targets, prioritising OCI compliance:
+
+* **Container:** Podman (Rootless), Docker
+* **OS:** Linux (Fedora Kinoite), Minix, macOS, BSD
+* **Edge:** Generic aarch64/x86_64 targets
+
+== 6. Governance
+
+This repository adheres to the **Strict Compliance** level defined in the `Mustfile`.
+
+* **Language:** Oxford British English.
+* **Typing:** Nominal / Strong / Static.
+* **No Telemetry:** All audits happen locally.
+
+== License
+
+Copyright (c) hyperpolymath. Distributed under the MIT License.
+EOF
